--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,15 +1,64 @@
-.container {
-  background: #37003c;
-  line-height: 4rem;
-  color: #fff;
-  top: 0;
-  left: 0;
-  width: 100%;
+.header {
+  position: relative;
+  background-color: #37003c;
 }
-.navigation {
-  display: flex;
+
+.headerWrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+@media (min-width: 600px) {
+  .headerWrapper {
+    display: flex;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+.nav {
+  flex: 1;
+}
+.logo {
+  height: 100px;
+  background-color: #ffffff;
+}
+
+@media (min-width: 600px) {
+  .navWrapper {
+    display: flex;
+    list-style: none;
+  }
+}
+
+@media (max-width: 599px) {
+  .navWrapper {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #d9f0f7;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+  }
+  .navWrapper.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .navLink {
-  margin-left: 4rem;
+  display: block;
+  padding: 1.5rem 1rem;
+  color: #ffffff;
+  &:hover {
+    color: aqua;
+  }
+}
+
+.navLinkEnd {
+  margin-left: 50rem;
 }
