--- a/src/components/Forms/FormPage/FormPage.module.scss
+++ b/src/components/Forms/FormPage/FormPage.module.scss
@@ -1,16 +1,11 @@
-/*.container {
-  width: 40vw;
-  height: 70vh;
-  margin: 10vh 28vw;
-  top: 0;
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50vh 20vh;
-  background: rgba(0, 0, 0, 0.3);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(7.5px);
-  -webkit-backdrop-filter: blur(7.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}*/
+.formBgImg {
+  background: url("../../../visuales/fondoLogin.jpg");
+  color: white;
+  height: 100vh;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
