--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,8 +1,55 @@
-.cancha {
-  max-width: 500px;
-  max-height: 500px;
+.container {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  width: 300px;
+  height: 250px;
+  margin: auto;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-bottom: 1rem;
+  background: rgba(0, 0, 0, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.hora {
+.img {
+  grid-area: 1 / 3 / 4 / 6;
+  width: 7rem;
+  margin: auto;
+}
+
+.info {
   color: white;
+  grid-area: 4 / 2 / 6 / 7;
+  margin: auto;
+  margin-left: 2rem;
+  margin-bottom: 1rem;
+}
+.info p {
+  color: white;
+}
+
+.selectFecha {
+  grid-area: 6 / 1 / 8 / 3;
+  margin: auto;
+  margin-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+.selectHora {
+  grid-area: 6 / 6 / 8 / 8;
+  margin: auto;
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+}
+.button {
+  grid-area: 6 / 3 / 8 / 6;
+  margin: auto;
+  margin-left: 1.1rem;
+  margin-bottom: 1rem;
 }
