--- a/src/components/CardsGrid/CardsGrid.module.scss
+++ b/src/components/CardsGrid/CardsGrid.module.scss
@@ -1,13 +1,7 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 350px);
-  gap: 3rem;
-  padding: 1rem;
-  justify-content: center;
-}
-
-@media (max-width: 560px) {
-  .grid {
-    grid-template-columns: 100%;
-  }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
