--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -1,6 +1,9 @@
-$fuentePrincipal: "Righteous", cursive;
-$fuenteSecundaria: "Righteous", cursive;
-$fuenteParrafos: "ABeeZee", sans-serif;
+$fuentePrincipal: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+$fuenteSecundaria: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+$fuenteParrafos: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 //Colors
 $casiNegro: #10002b;
 $moradoOscuro: #240046;
