--- a/src/components/Forms/FormPage/Login/FormPrueba.css
+++ b/src/components/Forms/FormPage/Login/FormPrueba.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
 }
+
 h1 {
   font-weight: bold;
   margin: 0;
@@ -68,6 +69,7 @@ form {
 }
 
 .container {
+  margin-top: 10rem;
   background-color: #0000007c;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -80,7 +82,7 @@ form {
 
 .form-container {
   position: absolute;
-  top: 0;
+
   height: 100%;
   transition: all 0.6s ease-in-out;
 }
