--- a/src/components/Forms/FormPage/Register/RegisterForm.module.scss
+++ b/src/components/Forms/FormPage/Register/RegisterForm.module.scss
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.formBgImg h2 {
+  text-align: center !important;
+}
 .form {
   background-color: #0000007c;
   border-radius: 1rem;
