--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -27,6 +27,11 @@
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 6rem;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  display: flex;
+
   font-family: Arial;
   color: white;
   font-size: 3rem;
@@ -39,6 +44,10 @@
 
 .containerTitle {
   grid-area: 2 / 1 / 3 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 .title {
   color: white;
@@ -47,6 +56,8 @@
   letter-spacing: 1rem;
   display: flex;
   justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .backgroundInfo {
@@ -88,4 +99,20 @@
   color: white;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 3rem;
+}
+
+@media screen and(max-width: 1400px) {
+  .title {
+    font-size: 15rem;
+  }
+}
+@media screen and(max-width: 1280px) {
+  .title {
+    font-size: 13rem;
+  }
+  .btn {
+    height: 5rem;
+    width: 15rem;
+    font-size: 2rem;
+  }
 }
