--- a/src/components/Forms/FormPage/Login/FormPrueba.css
+++ b/src/components/Forms/FormPage/Login/FormPrueba.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  align-content: center;
 }
 h1 {
   font-weight: bold;
