--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,55 +1,67 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(7, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  width: 300px;
-  height: 250px;
-  margin: auto;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  margin-bottom: 1rem;
-  background: rgba(0, 0, 0, 0.3);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(1.5px);
-  -webkit-backdrop-filter: blur(1.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  display: flex;
+  flex-direction: column;
+
+  height: 400px;
+}
+
+.imgcontainer {
+  display: flex;
+  justify-content: center;
 }
 
 .img {
-  grid-area: 1 / 3 / 4 / 6;
-  width: 7rem;
-  margin: auto;
+  width: 280px;
+  height: 200px;
 }
 
 .info {
   color: white;
-  grid-area: 4 / 2 / 6 / 7;
-  margin: auto;
-  margin-left: 2rem;
-  margin-bottom: 1rem;
 }
 .info p {
+  font-size: 1.5rem;
+  text-align: center;
   color: white;
 }
 
-.selectFecha {
-  grid-area: 6 / 1 / 8 / 3;
-  margin: auto;
-  margin-left: 0.5rem;
-  margin-bottom: 1rem;
+.selectContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
-.selectHora {
-  grid-area: 6 / 6 / 8 / 8;
-  margin: auto;
-  margin-right: 0.5rem;
-  margin-bottom: 1rem;
+.select {
+  margin-bottom: 1em;
+  padding: 0.25em;
+  border: 0;
+  border-bottom: 2px solid currentcolor;
+  font-weight: bold;
+  letter-spacing: 0.15em;
+  border-radius: 0.5rem;
 }
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
 .button {
-  grid-area: 6 / 3 / 8 / 6;
-  margin: auto;
-  margin-left: 1.1rem;
+  background-color: #000000;
+  display: block;
+  border-radius: 0.5rem;
+  color: #ffffff;
+  text-align: center;
+  padding: 0.6rem 1.5rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 700;
   margin-bottom: 1rem;
+  border: none;
+}
+@media (min-width: 768px) {
+  .button {
+    display: inline-block;
+  }
+}
+.button:hover {
+  cursor: pointer;
 }
