--- a/src/components/CardsGrid/CardsGrid.module.scss
+++ b/src/components/CardsGrid/CardsGrid.module.scss
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-template-columns: repeat(auto-fill, 350px);
+  gap: 40px;
+  padding: 40px;
+  justify-content: center;
 }
