--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,25 +1,23 @@
 .image {
   background-image: url("../../visuales/fulbolHome.jpg");
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  max-width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  position: absolute;
+  background-attachment: fixed;
 }
-.container {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 65vw;
-  height: 90vh;
-  position: absolute;
-  margin: 5vh 15vw;
-  overflow: hidden;
+.fondo {
+  width: 80%;
+  height: 95%;
+
+  margin: auto auto;
   border-radius: 1rem;
   background: rgba(0, 0, 0, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(1px);
-  -webkit-backdrop-filter: blur(1px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
+/* height: 100vh;
+max-width: 100%;
+position: relative;
+background-repeat: no-repeat;
+background-size: cover; */
