--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,5 +1,6 @@
 .image {
-  background-image: url("../../visuales/fulbolHome.jpg");
+  // background-image: url("../../visuales/fulbolHome.jpg");
+  background-color: white;
   width: 100%;
   height: 100vh;
   max-width: 100%;
