--- a/src/components/CardsGrid/CardsGrid.module.scss
+++ b/src/components/CardsGrid/CardsGrid.module.scss
@@ -5,3 +5,11 @@
   padding: 40px;
   justify-content: center;
 }
+.containerGrid {
+  width: 80%;
+  height: 95%;
+  margin: 50px auto;
+  padding-bottom: 5rem;
+  border-radius: 1rem;
+  background: rgba(0, 0, 0, 0.5);
+}
