--- a/src/components/Forms/FormPage/Login/FormPrueba.css
+++ b/src/components/Forms/FormPage/Login/FormPrueba.css
@@ -41,7 +41,7 @@ button.ghost {
   border-color: #000000;
 }
 
-form {
+.formNegro {
   background-color: #0000007c;
   display: flex;
   align-items: center;
