--- a/src/components/Success/Success.module.scss
+++ b/src/components/Success/Success.module.scss
@@ -3,13 +3,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 80%;
-  height: 95%;
-  margin: 50px auto;
-  background: rgba( 0, 255, 26, 0.7 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 4.5px );
-  -webkit-backdrop-filter: blur( 4.5px );
+  width: 60%;
+  height: 100%;
+  margin: 4rem auto;
+  background: rgb(8, 153, 23);
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.btn {
+  margin: 1rem;
 }
