--- a/src/components/CardsGrid/CardsGrid.module.scss
+++ b/src/components/CardsGrid/CardsGrid.module.scss
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 300px);
-  gap: 40px;
+  grid-template-columns: repeat(auto-fill, 350px);
+  gap: 60px;
   padding: 40px;
   justify-content: center;
 }
@@ -11,5 +11,8 @@
   margin: 50px auto;
   padding-bottom: 5rem;
   border-radius: 1rem;
-  background: rgba(0, 0, 0, 0.5);
+}
+
+.titulo {
+  text-align: center;
 }
