--- a/src/components/Failed/Failed.module.scss
+++ b/src/components/Failed/Failed.module.scss
@@ -1,17 +1,23 @@
 .container {
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 80%;
-  height: 95%;
-  margin: 50px auto;
-  background: rgba(255, 2, 2, 0.7);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4.5px);
-  -webkit-backdrop-filter: blur(4.5px);
+  width: 50%;
+  height: 100%;
+  margin: 4rem auto;
+  background: #ff2850;
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.txt {
+  text-align: center;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 500;
+}
 
+.btn {
+  margin: 1rem;
+}
