--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -7,19 +7,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
 .btngrid {
-  grid-area: 1 / 2 / 2 / 3;
-  align-items: center;
+  grid-area: 2 / 3 / 3 / 4;
 }
 .btnc {
-  margin-top: 20%;
-  margin-left: 50%;
-  margin-right: 50%;
+  margin: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn {
@@ -43,7 +43,7 @@
 }
 
 .containerTitle {
-  grid-area: 2 / 1 / 3 / 3;
+  grid-area: 1 / 1 / 2 / 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,7 +63,7 @@
 
 .backgroundInfo {
   border-radius: 1rem;
-  grid-area: 3 / 1 / 4 / 3;
+  grid-area: 3 / 1 / 4 / 4;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.5);
   margin-left: 10%;
@@ -92,6 +92,12 @@
   font-size: 1.5rem;
   text-align: center;
   margin: 1rem;
+}
+.datepicker {
+  grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .infotitle {
