--- a/src/scss/base/globals.scss
+++ b/src/scss/base/globals.scss
@@ -4,7 +4,7 @@
 }
 body {
   font-size: 1rem;
-  background-color: gray;
+  background-color: rgb(255, 255, 255);
 }
 p {
   font-size: 1.2rem;
@@ -34,4 +34,12 @@ h2 {
 h3 {
   font-family: $fuenteSecundaria;
   font-size: 1.8rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+select {
+  cursor: pointer;
 }
