--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -12,12 +12,15 @@
 }
 
 .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 2rem auto;
   background-color: black;
   height: 600px;
   width: 600px;
   border-radius: 20px;
+  text-align: center;
+  color: white;
+}
+.img {
+  margin-top: 2rem;
+  border-radius: 1rem;
 }
