--- a/src/components/NavBar/NavBarMUI.module.scss
+++ b/src/components/NavBar/NavBarMUI.module.scss
@@ -23,7 +23,7 @@
   }
 }
 .navegacion .navLink {
-  padding: 1rem 0;
+  padding: 1rem 2rem;
   color: $white;
   text-decoration: none;
   font-size: 1.4rem;
