--- a/src/components/Profile/EditProfile.module.scss
+++ b/src/components/Profile/EditProfile.module.scss
@@ -1,8 +1,20 @@
-.conteiner {
+.formContainer {
+  background-color: #0000007c;
+  border-radius: 1rem;
+  margin: 2rem;
+  width: 20%;
+  height: 25rem;
+  padding: 5rem;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.conteiner {
   justify-content: center;
   align-items: center;
-  margin: 5rem auto;
+
   background-color: black;
   color: white;
   border-radius: 20px;
@@ -10,23 +22,75 @@
   width: 600px;
   text-align: center;
 }
-
-.card {
-  margin: 2rem auto;
-  background-color: black;
-  height: 600px;
-  width: 600px;
-  border-radius: 20px;
-  text-align: center;
-  color: white;
-}
-.img {
-  margin-top: 2rem;
-  border-radius: 1rem;
-  height: 200px;
-  width: 200px;
+.container {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin: 3rem auto;
 }
 
 .btn {
+  margin: 1rem auto;
   color: black;
+  background-color: white;
+}
+
+.label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.formInput {
+  text-align: center;
+  border: 0;
+  border-bottom: 2px solid #e1e1e1;
+  outline: none;
+  font-size: 1.3rem;
+  color: #ffffff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+
+  &::placeholder {
+    color: white;
+  }
+  &:focus {
+    outline: none;
+    background-color: transparent;
+  }
+}
+
+.imageContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: black;
+  width: 500px;
+  border-radius: 20px;
+}
+
+.txt {
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0.5rem;
+}
+
+.img {
+  display: flex;
+  justify-content: center;
+  border-radius: 1rem;
+  height: 200px;
+  width: 200px;
+  margin: 2rem auto;
+}
+
+.c {
+  margin: 2rem auto;
 }
