--- a/src/components/HomeDos/HomeDos.module.scss
+++ b/src/components/HomeDos/HomeDos.module.scss
@@ -13,14 +13,9 @@
   grid-row-gap: 0px;
 }
 
-.logo{
-  grid-area: 1 / 2 / 2 / 3;
-  margin-left: 18rem;
-}
-
 
 .btngrid {
-  grid-area: 2 / 2 / 3 / 3; 
+  grid-area: 2 / 2 / 3 / 3;
 }
 .btnc {
   margin: 2rem;
@@ -31,22 +26,20 @@
 
 .btn {
   cursor: pointer;
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
   border-radius: 6rem;
   justify-content: center;
   align-items: center;
   align-content: center;
   display: flex;
-
   font-family: Arial;
   color: white;
-  font-size: 3rem;
-  height: 7rem;
-  width: 20rem;
+  font-size: 1.5rem;
+  height: 5rem;
+  width: 17rem;
   border: solid #ffffff 8px;
   text-decoration: none;
   background: none;
+  margin-left: 8rem;
 }
 
 .containerTitle {
@@ -60,7 +53,7 @@
 .title {
   color: white;
   margin: 0;
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   font-size: 17rem;
   letter-spacing: 1rem;
   display: flex;
@@ -71,11 +64,12 @@
 
 .backgroundInfo {
   border-radius: 1rem;
-  grid-area: 3 / 1 / 4 / 4;
+  grid-area: 2 / 1 / 3 / 4;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.5);
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 13%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
@@ -106,6 +100,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 .infotitle {
