--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -50,3 +50,10 @@
   text-align: center;
   font-size: 1.5rem;
 }
+
+.btnC {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
