--- a/src/components/Teams/TeamId.module.scss
+++ b/src/components/Teams/TeamId.module.scss
@@ -1,7 +1,34 @@
 .container{
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  color: black;
+  background-color: black;
+  border-radius: 20px;
+  height: 620px;
+  width: 333px;
+  transition: transform 250ms;
+  &:hover {
+    transform: translate(-10px, -10px);
+  }
+}
+.imgcontainer {
+  display: flex;
+  justify-content: center;
+}
+.img {
+  margin-top: 0.8rem;
+  width: 280px;
+  height: 200px;
+  border-radius: 10px;
+}
+.info {
+  color: white;
+}
+.info p {
+  font-size: 1.5rem;
+  text-align: center;
+  color: white;
+}
+.container button{
+  width: 15rem;
+  margin-left: 4rem;
 }
