--- a/src/components/Forms/FormPage/Login/FormPrueba.css
+++ b/src/components/Forms/FormPage/Login/FormPrueba.css
@@ -5,7 +5,34 @@
   flex-direction: column;
   align-content: center;
 }
-
+.boton-google {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+  padding-bottom: 15px;
+  box-shadow: 0px 0px 2px #111111;
+}
+.boton-google:hover {
+  border: solid 2px #111111;
+}
+.icono-google {
+  padding-top: 5px;
+}
+.titulo-derecha {
+  color: #000000;
+}
+.btn {
+  margin-top: 0.8rem;
+  font-size: 1.3rem;
+  box-shadow: 0px 0px 2px #111111;
+}
+.btn:hover {
+  border: solid 2px #000000;
+}
+.parrafo-derecha {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
 h1 {
   font-weight: bold;
   margin: 0;
@@ -39,6 +66,13 @@ button.ghost {
   color: #000000;
   background-color: transparent;
   border-color: #000000;
+}
+.ghost {
+  font-size: 1.3rem;
+  box-shadow: 0px 0px 2px #111111;
+}
+.ghost:hover {
+  border: solid 2px #6b6b6b;
 }
 
 .formNegro {
