--- a/src/components/Teams/TeamId.module.scss
+++ b/src/components/Teams/TeamId.module.scss
@@ -4,7 +4,7 @@
   background-color: black;
   border-radius: 20px;
   height: 620px;
-  width: 333px;
+  width: 633px;
   transition: transform 250ms;
   &:hover {
     transform: translate(-10px, -10px);
@@ -16,12 +16,14 @@
 }
 .img {
   margin-top: 0.8rem;
+  margin-right: 18rem;
   width: 280px;
   height: 200px;
   border-radius: 10px;
 }
 .info {
-  color: white;
+  color: red;
+  margin-right: 18rem;
 }
 .info p {
   font-size: 1.5rem;
@@ -30,5 +32,47 @@
 }
 .container button{
   width: 15rem;
-  margin-left: 4rem;
+  margin-left: 3rem;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  color: white;
+}
+
+.player{
+  font-size: 1.5rem;
+  text-align: center;
+  color: rgb(236, 42, 42);
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 1.3rem;
+
+}
+
+.players{
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  align-content: flex-start;
+  align-items: center;
+  text-align: center;
+  margin-left: 18rem;
+  margin-top: -33rem;
+}
+
+.imagePlayer{
+  width:4rem;
+  height:3rem
+}
+
+.btnEliminar{
+background-color:rgb(236, 42, 42);
 }
