add misreservas and allteams

--- a/src/components/Reserva/MisReservas.module.scss
+++ b/src/components/Reserva/MisReservas.module.scss
@@ -1,8 +1,8 @@
 .container {
-  background-image: url("https://apuntesderabona.com/wp-content/uploads/2017/05/Estadios.jpg");
+  background: url("../../visuales/edit.jpg");
   color: white;
-  height: 100vh;
-  max-width: 100%;
+  //height: 100vh;
+  //max-width: 100%;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
