--- a/src/components/Teams/TeamId.module.scss
+++ b/src/components/Teams/TeamId.module.scss
@@ -1,9 +1,10 @@
+
 .container{
   display: flex;
   flex-direction: column;
-  background-color: black;
-  border-radius: 20px;
-  height: 620px;
+  background-color: rgba(0, 0, 0, 0.801);
+  border-radius: 25px;
+  height: 730px;
   width: 633px;
   transition: transform 250ms;
   &:hover {
@@ -26,12 +27,15 @@
   margin-right: 18rem;
 }
 .info p {
+  display: flex;
+  align-items: center;
+  flex-direction:column;
   font-size: 1.5rem;
   text-align: center;
   color: white;
 }
 .container button{
-  width: 15rem;
+  width: 17rem;
   margin-left: 3rem;
   display: flex;
   text-align: center;
@@ -65,7 +69,7 @@ h3 {
   align-items: center;
   text-align: center;
   margin-left: 18rem;
-  margin-top: -33rem;
+  margin-top: -42rem;
 }
 
 .imagePlayer{
