--- a/src/components/Forms/FormPage/Login/FormPrueba.css
+++ b/src/components/Forms/FormPage/Login/FormPrueba.css
@@ -75,17 +75,19 @@ button.ghost {
   border: solid 2px #6b6b6b;
 }
 
-.formNegro {
-  background-color: #0000007c;
+.formNegroContainer {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 0 50px;
-  height: 100%;
+
   text-align: center;
 }
-
+.formNegro {
+  padding: 30px 50px;
+  height: 100%;
+  background-color: #0000007c;
+}
 .inputLogIn {
   background-color: #eee;
   border: none;
