--- a/src/components/Teams/Teams.module.scss
+++ b/src/components/Teams/Teams.module.scss
@@ -1,22 +1,18 @@
 .container {
-  background-image: url("https://apuntesderabona.com/wp-content/uploads/2017/05/Estadios.jpg");
   color: white;
-  height: 100vh;
-  max-width: 100%;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
  
 }
 .containerGrid {
-  width: 90%;
-  height: 95%;
-  margin: 50px auto;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 30px auto;
   padding-bottom: 5rem;
   border-radius: 1rem;
   background-color: rgba(0, 0, 0, 0.692);
@@ -27,8 +23,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 350px);
-  gap: 60px;
-  padding: 40px;
+  gap: 80px;
+  padding: 30px;
   justify-content: center;
   text-align: center;
 }
