--- a/src/components/Teams/TeamsId.module.scss
+++ b/src/components/Teams/TeamsId.module.scss
@@ -2,9 +2,10 @@
 .container {
   background-image: url("https://apuntesderabona.com/wp-content/uploads/2017/05/Estadios.jpg");
   color: white;
-  margin-top: -5.5rem;
-  height: 100vh;
-  width: 100%;
+  height: 130vh;
+  max-width: 100%;
+  top: -3.3rem;
+  bottom: -3.5rem;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,6 +25,7 @@
   border-radius: 1rem;
 }
 
-.titulo {
+.titulo h1{
+  font-size: 5rem;
   text-align: center;
 }
