bug-fix-recargas

--- a/src/components/Teams/EditTeam.module.scss
+++ b/src/components/Teams/EditTeam.module.scss
@@ -94,3 +94,13 @@
 .c {
   margin: 2rem auto;
 }
+.btnPlayer {
+  cursor: pointer;
+  font-weight: bold;
+  color: white;
+  border-radius: 5px;
+  background-color: red;
+  border: none;
+  height: 1.5rem;
+  width: 1.5rem;
+}
