--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,35 +1,36 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  border-radius: 20px;
-  height: 620px;
-  width: 333px;
-  transition: transform 250ms;
-  &:hover {
-    transform: translate(-10px, -10px);
-  }
+  box-shadow: 0 15px 30px 1px grey;
+  background: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  border-radius: 5px;
+  overflow: hidden;
+  margin: 1rem auto;
+  height: 400px;
+  width: 750px;
 }
 
 .imgcontainer {
-  display: flex;
-  justify-content: center;
+  // display: inline-block;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  float: right;
+  width: 45%;
 }
 
 .img {
-  margin-top: 0.8rem;
-  width: 280px;
-  height: 200px;
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .info {
-  color: white;
+  color: #000000;
 }
 .info p {
   font-size: 1.5rem;
+  font-weight: 450;
   text-align: center;
-  color: white;
+  color: #000000;
 }
 
 .selectContainer {
