--- a/src/components/Card/FormAlquiler/FormAlquiler.module.scss
+++ b/src/components/Card/FormAlquiler/FormAlquiler.module.scss
@@ -5,22 +5,25 @@
 }
 
 .hora {
-  color: white;
+  color: #000000;
+  font-weight: 500;
   text-align: center;
+}
+.boton {
+  background-color: #000000;
+  color: #ffffff;
 }
 .selectHora {
   border-radius: 10px;
   outline: none;
   text-decoration: none;
   border: 1px solid white;
-
   background-color: #000000;
   margin: 1rem;
   color: white;
 }
 .select {
   text-align: center;
-
   color: white;
   font-size: 1rem;
 }
