--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -1,26 +1,22 @@
 .container {
   background: url("../../visuales/edit.jpg");
+
   color: white;
   height: 100vh;
   max-width: 100%;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-  grid-area: 1 / 2 / 2 / 3;
-  margin-left: 18rem;
+  width: 10rem;
+  margin: 1rem;
 }
 
-.btngrid {
-  grid-area: 2 / 2 / 3 / 3;
-}
 .btnc {
   margin: 2rem;
   display: flex;
@@ -49,12 +45,11 @@
 }
 
 .containerTitle {
-  grid-area: 1 / 1 / 2 / 4;
+  margin: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  margin-top: 13rem;
 }
 .title {
   color: white;
@@ -81,18 +76,6 @@
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
-
-.busca {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.reserva {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-.alquila {
-  grid-area: 1 / 3 / 2 / 4;
-}
-
 .parrafo {
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
