--- a/src/scss/base/globals.scss
+++ b/src/scss/base/globals.scss
@@ -3,8 +3,8 @@
   padding: 0;
 }
 body {
+  height: 100%;
   font-size: 1rem;
-  background-color: rgb(255, 255, 255);
 }
 p {
   font-size: 1.2rem;
