--- a/src/components/Notificaciones/Notificaciones.module.scss
+++ b/src/components/Notificaciones/Notificaciones.module.scss
@@ -11,8 +11,9 @@
   border-right: solid 0.6px #3e4042;
   width: 45%;
 }
-.notificacion {
-  background-color: #18191a;
+.notificacionC {
+  border-top: solid 0.6px #3e4042;
+  border-bottom: solid 0.6px #3e4042;
 }
 .textoNotificaciones {
   color: #ffffff;
