--- a/src/components/Teams/TeamsId.module.scss
+++ b/src/components/Teams/TeamsId.module.scss
@@ -1,6 +1,4 @@
-
 .container {
-  background-image: url("https://apuntesderabona.com/wp-content/uploads/2017/05/Estadios.jpg");
   color: white;
   height: 130vh;
   max-width: 100%;
@@ -25,7 +23,8 @@
   border-radius: 1rem;
 }
 
-.titulo h1{
+.titulo h1 {
+  color: black;
   font-size: 5rem;
   text-align: center;
 }
