--- a/src/components/Teams/EditTeam.module.scss
+++ b/src/components/Teams/EditTeam.module.scss
@@ -11,6 +11,13 @@
   flex-direction: column;
   text-align: center;
 }
+.containerGlobal {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 .conteiner {
   justify-content: center;
   align-items: center;
@@ -21,6 +28,7 @@
   height: 100px;
   width: 600px;
   text-align: center;
+  margin: 1rem;
 }
 .container {
   display: flex;
@@ -33,8 +41,8 @@
 
 .btn {
   margin: 1rem auto;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: black;
 }
 
 .label {
