--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -1,8 +1,7 @@
 .container {
   background: url("../../visuales/edit.jpg");
-
   color: white;
-  height: 100vh;
+  height: 100%;
   max-width: 100%;
   position: relative;
   background-repeat: no-repeat;
