--- a/src/components/Notificaciones/Notificaciones.module.scss
+++ b/src/components/Notificaciones/Notificaciones.module.scss
@@ -4,9 +4,11 @@
   align-items: center;
   text-align: center;
   background-color: #18191a;
+  height: 100vh;
 }
 .containerNotificaciones {
   background-color: #242526;
+  height: 100vh;
   border-left: solid 0.6px #3e4042;
   border-right: solid 0.6px #3e4042;
   width: 45%;
