--- a/src/components/HomeDos/HomeDos.module.scss
+++ b/src/components/HomeDos/HomeDos.module.scss
@@ -44,9 +44,7 @@
   border-radius: 1rem;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.5);
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 13%;
+  margin: 0 auto;
   display: flex;
 }
 
